--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
     "@nivo/core": "^0.80.0",
     "@nivo/pie": "^0.80.0",
+    "add-to-calendar-button-react": "^2.2.1",
     "nivo": "^0.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook": "^9.0.12",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.8.1"
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.8.1",
+    "react-share": "^4.4.1",
+    "react-twitter-widgets": "^1.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
