--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
     "tailwindcss": "^3.2.7",
     "vite": "^4.0.0"
   },
-  "engines": {"node": ">=16"}
+  "engines": {"node": ">=16"},
+  "homepage": "https://ccak.onrender.com"
 }
