--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "add-to-calendar-button-react": "^2.2.2",
     "nivo": "^0.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "react-twitter-widgets": "^1.11.0",
     "web-vitals": "^2.1.4"
   },
