--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "@heroicons/react": "^2.0.16",
     "@nivo/core": "^0.80.0",
     "@nivo/pie": "^0.80.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "add-to-calendar-button-react": "^2.2.2",
+    "axios": "^1.4.0",
+    "buffer": "^6.0.3",
     "nivo": "^0.31.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.3",
