--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
+    "react-modal-video": "^2.0.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
