--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
+    "react-images": "^1.2.0-beta.7",
     "react-modal-video": "^2.0.0",
+    "react-photo-gallery": "^8.0.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
