--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^4.8.0",
     "react-images": "^1.2.0-beta.7",
     "react-modal-video": "^2.0.0",
+    "react-pdf": "^7.1.2",
     "react-photo-gallery": "^8.0.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.3",
