--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
     "react-images": "^1.2.0-beta.7",
+    "react-loading-skeleton": "^3.3.1",
     "react-modal-video": "^2.0.0",
     "react-pdf": "^7.1.2",
     "react-photo-gallery": "^8.0.0",
