--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "imagekitio-react": "^2.0.0",
     "jwt-decode": "^3.1.2",
     "nivo": "^0.31.0",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
