--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "add-to-calendar-button-react": "^2.2.2",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
+    "caniuse-lite": "^1.0.30001533",
     "imagekitio-react": "^2.0.0",
     "jwt-decode": "^3.1.2",
     "nivo": "^0.31.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
