--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ccak",
   "version": "0.1.0",
+  "main":"index.js",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.0.16",
