--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
+    "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
     "react-images": "^1.2.0-beta.7",
